{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 11,
  "lineage": "c6a33c47-f59a-4d9b-55ef-dc69183621b0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ex_vm1_xc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02ccb28830b645a41",
            "arn": "arn:aws:ec2:us-east-2:872260326033:instance/i-0ecbe5360c41b0f62",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0ecbe5360c41b0f62",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key_xc",
            "monitoring": false,
            "primary_network_interface_id": "eni-05348066e436a0644",
            "private_dns": "ip-172-31-25-96.us-east-2.compute.internal",
            "private_ip": "172.31.25.96",
            "public_dns": "ec2-18-220-108-40.us-east-2.compute.amazonaws.com",
            "public_ip": "18.220.108.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-009c095b03f0af61b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default",
              "ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-e6ba019c",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07b99476157fb12f2",
              "sg-879600ed"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ex_vm2_xc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02ccb28830b645a41",
            "arn": "arn:aws:ec2:us-east-2:872260326033:instance/i-04d3037ee0fe47b09",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-04d3037ee0fe47b09",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key_xc",
            "monitoring": false,
            "primary_network_interface_id": "eni-0ebb583c03814f339",
            "private_dns": "ip-172-31-28-32.us-east-2.compute.internal",
            "private_ip": "172.31.28.32",
            "public_dns": "ec2-18-191-199-174.us-east-2.compute.amazonaws.com",
            "public_ip": "18.191.199.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d458f192108984ea",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default",
              "ex_xc_8080",
              "ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-e6ba019c",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03a6ddbd6e05876ec",
              "sg-07b99476157fb12f2",
              "sg-879600ed"
            ]
          },
          "dependencies": [
            "aws_security_group.ex_xc_8080"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ex_xc_8080",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:872260326033:security-group/sg-03a6ddbd6e05876ec",
            "description": "Allow connexion 8080",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "id": "sg-03a6ddbd6e05876ec",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "ex_xc_8080",
            "name_prefix": null,
            "owner_id": "872260326033",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-19a4f871"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http_8080",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:872260326033:security-group/sg-0e3869507c0f8dc1a",
            "description": "Allow connexion 8080",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "id": "sg-0e3869507c0f8dc1a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "http_8080",
            "name_prefix": null,
            "owner_id": "872260326033",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-19a4f871"
          }
        }
      ]
    }
  ]
}